--- a/public/template.html
+++ b/public/template.html
@@ -24,78 +24,16 @@
         </li>
       </ul>
     </header>
-    {{{ body }}}
-
-    <!-- blog-cards loop -->
-    {{#each blogs as |blog|}}
-      {{> blog-cards}}
-    {{/each}}
-
-    <!-- blog-cards -->
-    <section class="row d-flex justify-content-center">
-    <div class="card m-3" style="width: 18rem;">
-      <div class="card-body">
-        <h5 class="card-title">{{title}}</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Posted by {{username}} on {{date}}</h6>
-        <a href="/blog/{{id}}" class="card-link text-reset">View Blog</a>
+    <main class="main-body">
+    <section class="d-flex justify-content-center">
+      <div class="card m-3" style="width: 35rem;">
+        <div class="card-body">
+          <h6 class="card-subtitle mb-2 text-muted"><span class="text-warning">&Omega;</span>{{user.username}} | {{formatDate createdAt}}</h6>
+          <p class="card-text">{{text}}</p>
+        </div>
       </div>
-    </div>
   </section>
-
-  <!-- Display blog with comment forms -->
-  <section class="row d-flex justify-content-center">
-    <div class="card m-3" style="width: 30rem;">
-      <div class="card-body">
-        <h5 class="card-title">{{title}}</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Posted by {{username}} on {{date}}</h6>
-        <p class="card-text">{{text}}</p>
-        <a href="/blog/{{id}}" class="card-link text-reset">View Blog</a>
-      </div>
-    </div>
-  </section>
-  <section>
-    <form class="row d-flex justify-content-center">
-      <div class="form-group" style="width: 25rem">
-        <label for="exampleFormControlTextarea1">Add a comment</label>
-        <textarea class="form-control shadow-none" id="exampleFormControlTextarea1" rows="3"></textarea>
-        <button type="submit" class="btn-dark mt-1">Post</button>
-      </div>
-    </form>
-  </section>
-
-
-  <!-- Login form -->
-  <section class="d-flex justify-content-around">
-    <form style="width: 30rem">
-      <div class="form-group">
-        <label for="inputUsername">Username</label>
-        <input type="email" class="form-control shadow-none" id="inputUsername" aria-describedby="emailHelp" placeholder="Username">
-      </div>
-      <div class="form-group">
-        <label for="inputPassword">Password</label>
-        <input type="password" class="form-control shadow-none" id="inputPassword" placeholder="Password">
-      </div>
-      <button type="submit" class="btn-dark mt-1">Sign In</button>
-      <div class="form-group">
-        <a href="/signup" class="text-reset">No account? Sign up here.</a>
-      </div>
-    </form>
-</section>
-  <!-- Signin form -->
-  <section class="d-flex justify-content-around">
-    <form style="width: 30rem">
-      <div class="form-group">
-        <label for="inputUsername">Username</label>
-        <input type="email" class="form-control shadow-none" id="inputUsername" aria-describedby="emailHelp" placeholder="New Username">
-      </div>
-      <div class="form-group">
-        <label for="inputPassword">Password</label>
-        <input type="password" class="form-control shadow-none" id="inputPassword" placeholder="New Password">
-      </div>
-      <button type="submit" class="btn-dark mt-1">Sign Up</button>
-    </form>
-</section>
-
+</main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
