--- a/public/template.html
+++ b/public/template.html
@@ -57,7 +57,51 @@
       </div>
     </div>
   </div>
-  
+<div class="d-flex justify-content-center" style="width: 50rem">
+  <form>
+    <div class="form-group" >
+      <label for="exampleFormControlTextarea1">Title</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+  </form>
+  <form class="d-flex justify-content-center" style="width: 50rem">
+    <div class="form-group">
+      <label for="exampleFormControlTextarea1">Body</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+  </form>
+</div>
+<section class="d-flex justify-content-center">
+  <div class="card m-3" style="width: 50rem;">
+    <div class="card-body">
+      <label for="exampleFormControlTextarea1">Title</label>
+      <textarea type="text" class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+      <label for="exampleFormControlTextarea1">Body</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+  </div>
+</section>
+
+<section class="container">
+  <h4 class="row justify-content-center">Create Your Blog</h4>
+  <a class="row justify-content-center text-reset" href="https://vancouverea.org/responsible-blogging/" target="_blank">Guidelines</a>
+</section>
+
+<main class="d-flex justify-content-around mt-3">
+  <form class="form login-form" style="width: 50rem">
+    <div class="form-group">
+      <label for="newBlogTitle">Title</label>
+      <input type="text" class="form-control shadow-none" autocomplete="off" id="newBlogTitle" placeholder="My new blog post title">
+      <small>Must be less than 100 characters.</small>
+    </div>
+    <div class="form-group mt-2">
+      <label for="newBlogBody">Body</label>
+      <textarea type="text" class="form-control shadow-none" id="newBlogBody" placeholder="I can't read your thoughts, type them for me!"></textarea>
+    </div>
+    <button type="submit" class="btn border-dark mt-2">Post</button>
+  </form>
+</main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
